log
Sun 31 Mar 2024 01:15:07 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   33 |   if (L = NULL) exit(EXIT_FAILURE);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
eb09254
Sun 31 Mar 2024 01:15:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
763c74b
Sun 31 Mar 2024 01:18:02 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
12c69ce
Sun 31 Mar 2024 01:22:19 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
5c47c2d
Sun 31 Mar 2024 01:25:47 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
280ca97
Sun 31 Mar 2024 01:27:02 AM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:58:20: error: ‘Node’ has no member named ‘tail’
   58 |   if (list->current->tail != NULL){
      |                    ^~
list.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
427ecb9
Sun 31 Mar 2024 01:27:31 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4b837c8
